--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
+    "match-sorter": "^6.3.1",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.9.0",
+    "react-image-magnify": "^2.7.4",
+    "react-mixitup": "^4.0.6",
+    "react-player": "^2.12.0",
+    "swiper": "^9.3.2",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "daisyui": "^2.51.6"
   }
 }
